--- a/src/components/HomeLayout/footer/web.scss
+++ b/src/components/HomeLayout/footer/web.scss
@@ -1,7 +1,10 @@
 .footer_box {
   width: 100%;
-  // min-height: 200px;
+  min-height: 440px;
   padding-bottom: 20px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: flex-end;
   .container {
     width: 1200px;
     margin: 0 auto;
