--- a/src/views/Home/style/mobile.scss
+++ b/src/views/Home/style/mobile.scss
@@ -107,11 +107,13 @@
           &::after {
             content: "";
             background: none;
+            width: 0;
+            height: 0;
           }
         }
         .ball1 {
-          left: -55px;
-          bottom: -120px;
+          left: -75px;
+          bottom: -160px;
         }
         .ball2 {
           left: -60px;
@@ -122,8 +124,10 @@
           top: 50px;
         }
         .ball5 {
-          top: 460px;
-          right: -110px;
+          width: 200px;
+          height: 215px;
+          top: 450px;
+          right: -45px;
         }
       }
       .white_paper_mobile {
@@ -199,9 +203,10 @@
             }
           }
           .bottom {
-            width: 125px;
+            width: 118px;
             height: 28px;
-            background-size: cover;
+            background: linear-gradient(225deg, #18c8ff 14.89%, #933ffe 85.85%);
+            border-radius: 50px;
             font-size: 14px;
           }
         }
@@ -213,16 +218,17 @@
         background: url("../../../assets/mobile/home/berus_bg.png") no-repeat center;
         background-size: cover;
         .left {
-          width: 337.16px;
-          height: 302px;
+          width: 317.16px;
+          height: 292px;
+          margin: 0 auto;
           background: url("../../../assets/mobile/home/beruscoin.png") no-repeat center;
-          background-size: cover;
+          background-size: contain;
           &::after {
             content: "";
             background: url("../../../assets/mobile/home/box_shadowbg.png") no-repeat center;
             background-size: 100% 100%;
             left: 2%;
-            top: 0;
+            top: 0px;
             width: 96%;
             height: 100%;
             transform: none;
@@ -232,19 +238,35 @@
         .right {
           width: 100%;
           margin-left: 0;
-          width: 307px;
           display: flex;
           flex-direction: column;
           align-items: center;
           padding-right: 0;
-          .title {
-            font-size: 38px;
-            margin-top: 33px;
-            margin-bottom: 30px;
+          .top_contan {
+            .title {
+              font-size: 38px;
+              margin-top: 33px;
+              margin-bottom: 30px;
+              font-weight: 800;
+              margin: 0;
+              display: flex;
+              justify-content: center;
+            }
+            .content {
+              margin-top: 10px;
+              padding: 0 34px;
+              text-align: center;
+              // font-family: "Manrope";
+              font-style: normal;
+              font-size: 14px;
+              line-height: 14px;
+            }
           }
-          .content {
-            font-size: 14px;
-            text-align: center;
+          .bottom_contan {
+            margin: 0 auto;
+            margin-top: 20px;
+            background: linear-gradient(225deg, #18c8ff 14.89%, #933ffe 85.85%);
+            border-radius: 50px;
           }
         }
       }
