--- a/src/style.scss
+++ b/src/style.scss
@@ -5,8 +5,10 @@ body,
   width: 100%;
   margin: 0;
   padding: 0;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
-
 body {
   font-style: normal;
   font-stretch: normal;
