--- a/src/views/CNFT/style/mobile.scss
+++ b/src/views/CNFT/style/mobile.scss
@@ -1,70 +1,31 @@
-.mobile_dog_box {
+.mobile_cnft_box {
   width: 100%;
-  margin-top: 4rem;
-  height: calc(100vh - 4rem);
   position: relative;
-  .big_bg {
-    position: absolute;
-    top: -4rem;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: url("../../../assets/mobile/phone_back.png") no-repeat center;
-    background-size: 100% 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: -1;
-    .gYgkvS {
-      display: inline-block;
-      position: relative;
-      .bfvNdl {
-        text-align: center;
-        font-size: 82px;
-        display: inline-block;
-        background: linear-gradient(
-            270deg,
-            rgb(255, 115, 86) 0%,
-            rgb(255, 89, 226) 25.52%,
-            rgb(82, 221, 246) 50%,
-            rgb(234, 223, 78) 76.04%,
-            rgb(255, 115, 86) 100%
-          )
-          0% 0% / 200%;
-        -webkit-background-clip: text;
-        color: transparent;
-        display: inline-block;
-        animation: 4s linear 0s infinite normal none running eEGgoN;
-      }
-      .cXKpZu {
-        filter: blur(32px);
-        opacity: 0.5;
-        display: inline;
-        left: 0px;
-        position: absolute;
-        .bfvNdl {
-          text-align: center;
-          font-size: 82px;
-          display: inline-block;
-          background: linear-gradient(
-              270deg,
-              rgb(255, 115, 86) 0%,
-              rgb(255, 89, 226) 25.52%,
-              rgb(82, 221, 246) 50%,
-              rgb(234, 223, 78) 76.04%,
-              rgb(255, 115, 86) 100%
-            )
-            0% 0% / 200%;
-          -webkit-background-clip: text;
-          color: transparent;
-          display: inline-block;
-          animation: 4s linear 0s infinite normal none running eEGgoN;
-        }
-      }
+  .block1 {
+    height: 467px;
+    video {
+      width: auto;
     }
-    @keyframes eEGgoN {
-      100% {
-        background-position: 200% center;
+    .center_cont  {
+      top: 93px;
+      .left_cont {
+        .top_tile {
+          font-family: 'Manrope';
+          font-style: normal;
+          font-weight: 800;
+          font-size: 38px;
+          line-height: 52px;
+        }
+        .bottom_content  {
+          width: 363px;
+          font-family: 'Manrope';
+          font-style: normal;
+          font-weight: 600;
+          font-size: 20px;
+          color: #FFFFFF;
+          height: 66px;
+          margin-bottom: 11px;
+        }
       }
     }
   }
