--- a/src/views/CNFT/style/mobile.scss
+++ b/src/views/CNFT/style/mobile.scss
@@ -6,25 +6,179 @@
     video {
       width: auto;
     }
-    .center_cont  {
+    .center_cont {
       top: 93px;
+      padding: 0 32px;
       .left_cont {
         .top_tile {
-          font-family: 'Manrope';
+          font-family: "Manrope";
           font-style: normal;
           font-weight: 800;
           font-size: 38px;
           line-height: 52px;
         }
-        .bottom_content  {
+        .bottom_content {
           width: 363px;
-          font-family: 'Manrope';
+          font-family: "Manrope";
           font-style: normal;
           font-weight: 600;
           font-size: 20px;
-          color: #FFFFFF;
+          color: #ffffff;
           height: 66px;
           margin-bottom: 11px;
+        }
+      }
+      .new_topcont {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 54px;
+        .left_c {
+          width: 137px;
+          height: 52px;
+          font-family: "Manrope";
+          font-style: normal;
+          font-weight: 800;
+          font-size: 24px;
+          line-height: 108.6%;
+          color: #ffffff;
+        }
+        .right_c {
+          width: 96px;
+          height: 27.33px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: #000000;
+          border: 1.40146px solid #00ffc2;
+          border-radius: 21.0219px;
+          font-family: "Manrope";
+          font-style: normal;
+          font-weight: 600;
+          font-size: 12px;
+          line-height: 16px;
+          color: #00ffc2;
+        }
+      }
+    }
+  }
+
+  .block2 {
+    margin-top: -40px;
+    .center_cont {
+      padding: 0 32px;
+      .bottom_cont {
+        width: 100%;
+        height: 211px;
+        margin-top: 0;
+        background: url("../../../assets/mobile/cnft/cnft_bg.png") no-repeat center;
+        background-size: 100% 100%;
+        img {
+          width: 100%;
+          height: auto;
+        }
+        .coin_bg {
+          width: 90px;
+          height: 90px;
+          bottom: 18px;
+        }
+        .bottom_word {
+          .top_c {
+            font-family: "Manrope";
+            font-style: normal;
+            font-weight: 600;
+            font-size: 14.2405px;
+            line-height: 108.6%;
+            text-align: center;
+            color: #ffffff;
+          }
+          .bottom_c {
+            font-family: "DM Sans";
+            font-style: normal;
+            font-weight: 500;
+            font-size: 7.12025px;
+            line-height: 9px;
+            color: #a4a4a4;
+            margin-top: 8px;
+          }
+        }
+      }
+    }
+  }
+
+  .block3 {
+    margin-top: 34px;
+    .center_cont {
+      padding: 0 32px !important;
+      .top_cont {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        .left_c {
+          width: 137px;
+          height: 52px;
+          font-family: "Manrope";
+          font-style: normal;
+          font-weight: 800;
+          font-size: 24px;
+          line-height: 108.6%;
+          color: #ffffff;
+        }
+        .right_c {
+          width: 96px;
+          height: 27.33px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: #000000;
+          border: 1.40146px solid #00ffc2;
+          border-radius: 21.0219px;
+          font-family: "Manrope";
+          font-style: normal;
+          font-weight: 600;
+          font-size: 12px;
+          line-height: 16px;
+          color: #00ffc2;
+        }
+      }
+      .arrvial_bottom_cont {
+        width: 100%;
+        ul {
+          flex-wrap: wrap;
+          margin-top: 23px;
+          li {
+            width: 48%;
+            padding: 5px;
+            height: 225px;
+            margin-bottom: 15px;
+            img {
+              width: 100%;
+              height: auto;
+            }
+            .bottom {
+              .title {
+                font-family: "DM Sans";
+                font-style: normal;
+                font-weight: 500;
+                font-size: 6.71154px;
+                line-height: 9px;
+                color: #a4a4a4;
+              }
+              .num {
+                font-family: "Manrope";
+                font-style: normal;
+                font-weight: 600;
+                font-size: 11.1859px;
+                line-height: 108.6%;
+                color: #ffffff;
+                margin-top: 5px;
+                padding-bottom: 3px;
+              }
+              .bottom_word {
+                margin-top: 1px;
+              }
+            }
+          }
         }
       }
     }
