--- a/src/views/MillionDogClub/style/mobile.scss
+++ b/src/views/MillionDogClub/style/mobile.scss
@@ -1,19 +1,47 @@
 .mobile_million_box {
   width: 100%;
   margin-top: 4rem;
-  height: calc(100vh - 4rem);
+  height: 100%;
   position: relative;
   .big_bg {
     position: absolute;
     top: -4rem;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 125%;
     background: url("../../../assets/mobile/phone_back.png") no-repeat center;
     background-size: 100% 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: -1;
+  }
+  .center_cont {
+    padding: 0 32px;
+    .top_content {
+      img {
+        width: 370px;
+        height: 370px;
+      }
+      .accord {
+        width: 100%;
+        text-align: center;
+        font-family: "Manrope";
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 108.6%;
+        text-align: center;
+        color: #ffffff;
+        height: auto;
+      }
+    }
+    .content_box {
+      .top_cont {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+      }
+    }
   }
 }
