--- a/src/views/MillionDogClub/style/mobile.scss
+++ b/src/views/MillionDogClub/style/mobile.scss
@@ -5,10 +5,10 @@
   position: relative;
   .big_bg {
     position: absolute;
-    top: -4rem;
-    left: 0;
-    width: 100%;
-    height: 125%;
+    top: -40rem;
+    left: -160%;
+    width: 280%;
+    height: 150%;
     background: url("../../../assets/mobile/phone_back.png") no-repeat center;
     background-size: 100% 100%;
     display: flex;
@@ -41,6 +41,29 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        .title {
+          font-family: 'Manrope';
+          font-style: normal;
+          font-weight: 800;
+          font-size: 24px;
+          line-height: 108.6%;
+          color: #FFFFFF;
+        }
+        .start_btn {
+          margin-top: 0;
+          width: 121.27px;
+          height: 29px;
+          font-family: 'Manrope';
+          font-style: normal;
+          font-weight: 800;
+          font-size: 15.8182px;
+          line-height: 22px;
+          color: #FFFFFF;
+        }
+      }
+      ul {
+        justify-content: center;
       }
     }
   }
