--- a/src/views/Berus/style/web.scss
+++ b/src/views/Berus/style/web.scss
@@ -218,9 +218,12 @@
         }
       }
       .center_chart {
-        width: 835px;
+        width: 100%;
         height: 835px;
         margin: 20px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
   }
