--- a/src/views/Berus/style/web.scss
+++ b/src/views/Berus/style/web.scss
@@ -4,14 +4,13 @@
   min-height: calc(100vh - 194px);
   position: relative;
   &::before {
-    width: 100%;
-    height: 100%;
+    width: 35%;
+    height: 35%;
     content: "";
     background: url("../../../assets/berus/top_bg.png") no-repeat center;
     background-size: 100% 100%;
     position: absolute;
-    top: -130px;
-    left: -350px;
+    top: -10%;
   }
   .block1 {
     width: 100%;
@@ -110,11 +109,14 @@
                 height: 30px;
                 background: linear-gradient(270deg, rgba(24, 200, 255, 0) 0%, rgba(147, 63, 254, 0.38) 91.1%);
                 border-radius: 10px;
-                padding-left: 10px;
+                padding:0 10px;
                 margin-left: 5px;
                 .MuiInputBase-formControl {
                   color: #fff;
                   height: 100%;
+                  input {
+                    text-align: center;
+                  }
                 }
               }
               .add_logo {
