--- a/src/views/Berus/style/mobile.scss
+++ b/src/views/Berus/style/mobile.scss
@@ -1,2 +1,183 @@
-.mobile_dog_box {
+.mobile_berus_box {
+  margin-top: 50px;
+  &::before {
+    width: 50%;
+    top: -5%;
+    height: 20%;
+  }
+  .block1 {
+    height: auto;
+    .center_cont {
+      .left_box {
+        width: 100%;
+        height: 555px;
+        .top_human {
+          width: 286px;
+          height: 387px;
+          margin: 0 auto;
+        }
+        .gif_box {
+          width: 299px;
+          height: 299px;
+          top: 335px;
+          left: 50%;
+          transform: translateX(-50%);
+        }
+      }
+      .right_box {
+        margin-left: 0;
+        padding: 0 28px;
+        .top_cont {
+          .top_tile {
+            font-family: "PingFang SC";
+            font-style: normal;
+            font-weight: 800;
+            font-size: 38px;
+            line-height: 52px;
+            color: #ffffff;
+            text-align: center;
+          }
+          .bottom_content {
+            font-family: "PingFang SC";
+            font-style: normal;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 108.6%;
+            text-align: center;
+            color: #ffffff;
+            margin-top: 0;
+          }
+        }
+        .bottom_cont {
+          margin-top: 77px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          width: 100%;
+          height: 451px;
+          background: linear-gradient(116.29deg, rgba(98, 98, 98, 0.28) -16.91%, rgba(0, 0, 0, 0.28) 101.76%);
+          backdrop-filter: blur(90.2013px);
+          border-radius: 27.0604px;
+          padding: 22px;
+          .top_con {
+            width: 100%;
+            .top_tile {
+              font-family: "PingFang SC";
+              text-align: center;
+              font-style: normal;
+              font-weight: 700;
+              font-size: 21.7478px;
+              line-height: 108.6%;
+              color: #ffffff;
+            }
+            .contaier_box {
+              margin-top: 17px;
+              .tile_name {
+                font-family: "PingFang SC";
+                text-align: center;
+                font-style: normal;
+                font-size: 12px;
+                line-height: 108.6%;
+                color: #ffffff;
+              }
+              .input_box {
+                width: 106px;
+                height: 27px;
+                .MuiInputBase-input {
+                  height: 100%;
+                }
+              }
+            }
+            .amount_box {
+              border-radius: 10px;
+              margin-top: 29px;
+              padding: 0 10px;
+              width: 100%;
+              height: 30px;
+              background: #485470;
+              .MuiInputBase-formControl {
+                color: #fff;
+                height: 100%;
+                .MuiInputBase-input {
+                  height: 100%;
+                }
+              }
+            }
+            .btn_box {
+              margin-left: 0;
+              margin-top: 30px;
+              button {
+                font-style: normal;
+                font-weight: 700;
+                font-size: 12px;
+                line-height: 20px;
+                font-family: "PingFang SC";
+                color: #ffffff;
+              }
+              .deposit {
+                background-size: 100% 100%;
+              }
+            }
+            .bottom_conten {
+              font-style: normal;
+              font-weight: 500;
+              font-size: 12px;
+              line-height: 111.2%;
+              font-family: "PingFang SC";
+              text-align: center;
+              color: #ffffff;
+              margin-top: 33px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .block2 {
+    margin-top: 68px;
+    padding-bottom: 50px;
+    .center_cont {
+      .top_tile {
+        font-family: "PingFang SC";
+        font-style: normal;
+        font-weight: 800;
+        font-size: 38px;
+        line-height: 52px;
+        color: #ffffff;
+      }
+      .top_other {
+        font-family: "PingFang SC";
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 108.6%;
+        text-align: center;
+        color: #ffffff;
+      }
+      .content_box {
+        width: 100%;
+        padding: 0 28px;
+        .top_word {
+          ul {
+            li {
+              .top_num {
+                font-size: 18px;
+                font-family: "PingFang SC";
+                line-height: 25px;
+              }
+              .top_name {
+                width: 100px;
+                font-size: 12px;
+                font-family: "PingFang SC";
+              }
+            }
+          }
+        }
+        .center_chart {
+          height: auto;
+        }
+      }
+    }
+  }
 }
