--- a/src/views/Berus/style/web.scss
+++ b/src/views/Berus/style/web.scss
@@ -109,7 +109,7 @@
                 height: 30px;
                 background: linear-gradient(270deg, rgba(24, 200, 255, 0) 0%, rgba(147, 63, 254, 0.38) 91.1%);
                 border-radius: 10px;
-                padding:0 10px;
+                padding: 0 10px;
                 margin-left: 5px;
                 .MuiInputBase-formControl {
                   color: #fff;
@@ -159,6 +159,9 @@
                 background: url("../../../assets/berus/btn_bg.png") no-repeat center;
                 background-size: cover;
                 margin-left: 20px;
+                &:hover {
+                  background: linear-gradient(225deg, #18c8ff 14.89%, #933ffe 85.85%);
+                }
               }
             }
           }
@@ -234,7 +237,7 @@
   border-bottom: none !important;
 }
 .MuiInput-underline:before {
-  border-bottom: none;
+  border-bottom: none !important;
 }
 .MuiInput-underline:after {
   border-bottom: none !important;
