change berus ui

--- a/src/views/Berus/style/mobile.scss
+++ b/src/views/Berus/style/mobile.scss
@@ -176,6 +176,10 @@
         }
         .center_chart {
           height: auto;
+          img {
+            width: 330px;
+            height: 330px;
+          }
         }
       }
     }
