--- a/src/views/Berus/style/web.scss
+++ b/src/views/Berus/style/web.scss
@@ -229,6 +229,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        img {
+          width: 835px;
+          height: 835px;
+        }
       }
     }
   }
